added some fixes to the design

--- a/style/main.css
+++ b/style/main.css
@@ -1,6 +1,6 @@
 /* Start main */
 .main {
-  background: url("images/banner.png") no-repeat;
+  background: url("/images/banner.png") no-repeat;
   background-color: #1e202b;
   padding: 50px 0;
 }
@@ -73,16 +73,8 @@
   background-color: #222530;
 }
 
-.main .forecasts .forecast:last-child .forecast-header {
-  border-top-right-radius: 10px;
-}
-
 .main .forecasts .forecast .forecast-body {
   height: 300px;
-}
-
-.main .forecasts .forecast:first-child .forecast-body {
-  border-bottom-left-radius: 10px;
 }
 
 .main .forecasts .forecast:first-child .forecast-body .forecast-info span {
@@ -134,10 +126,6 @@
   padding: 25px 20px;
 }
 
-.main .forecasts .forecast:last-child .forecast-body {
-  border-bottom-right-radius: 10px;
-}
-
 .main .forecasts .forecast .forecast-body .forecast-degree {
   margin-bottom: 1rem;
 }
@@ -177,17 +165,49 @@
   .main .forecast {
     width: 100%;
   }
+  .main .forecast .forecast-body .forecast-degree .degree-num.today-degree {
+    font-size: 5rem !important;
+  }
+  .main .forecast .forecast-body .forecast-degree .degree-num + div img {
+    height: 5rem !important;
+  }
+  .main .forecast:first-child .forecast-header {
+    border-top-right-radius: 10px;
+  }
+  .main .forecast:last-child .forecast-body {
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+  }
 }
 
 @media (min-width: 768px) and (max-width: 991px) {
   .main .forecast {
     width: calc(100% / 2);
   }
+  .main .forecast:nth-child(2) .forecast-header {
+    border-top-right-radius: 10px;
+  }
+  .main .forecast:nth-child(2) .forecast-body {
+    border-bottom-right-radius: 10px;
+  }
+  .main .forecast:last-child .forecast-body {
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+  }
 }
 
 @media (min-width: 992px) {
   .main .forecast {
     width: calc(100% / 3);
+  }
+  .main .forecast:first-child .forecast-body {
+    border-bottom-left-radius: 10px;
+  }
+  .main .forecast:last-child .forecast-header {
+    border-top-right-radius: 10px;
+  }
+  .main .forecast:last-child .forecast-body {
+    border-bottom-right-radius: 10px;
   }
 }
 
