repved duplicated file created by sass

--- a/style/_main.scss
+++ b/style/_main.scss
@@ -1,7 +1,7 @@
 /* Start main */
 
 .main {
-  background: url("/images/banner.png") no-repeat;
+  background: url("../images/banner.png") no-repeat;
   background-color: #1e202b;
   padding: 50px 0;
   form {
