--- a/style/style.scss
+++ b/style/style.scss
@@ -54,7 +54,7 @@ body {
   text-align: center;
 }
 
-@import "header.scss";
-@import "main.scss";
-@import "footer.scss";
+@import "header";
+@import "main";
+@import "footer";
   
