--- a/style/style.css
+++ b/style/style.css
@@ -230,7 +230,7 @@ header nav ul a:hover {
 /* End header */
 /* Start main */
 .main {
-  background: url("/images/banner.png") no-repeat;
+  background: url("../images/banner.png") no-repeat;
   background-color: #1e202b;
   padding: 50px 0;
 }
