edited the CSS for best practice impementation

--- a/style/_colors.scss
+++ b/style/_colors.scss
@@ -1,4 +1,4 @@
 $main-background-color: #1e202b;
 $secondary-background-color: #262936;
-$text-color: #009ad8;
-// $button-colors: 
+$blue-color: #009ad8;
+$gray-color: #bfc1c8
