--- a/style/_header.scss
+++ b/style/_header.scss
@@ -79,8 +79,8 @@ header {
     
     a.active,
     a:hover {
-      color: $text-color;
-      border-color: $text-color;
+      color: $blue-color;
+      border-color: $blue-color;
     }
   }
 
